sqlxo_macros/tests/try/err/unknown_key.stderr
error: unknown key in #[sqlxo]
 --> tests/try/err/unknown_key.rs:5:9
  |
5 | #[sqlxo(foo = "bar")]
  |         ^^^^^^^^^^^
